test/pass/api/string_split_all_empty.lly
if "     ".split(" ") != ["", "", "", "", "", ""]:
    stderr.write("Failed.\n")
