test/fail/basic_syntax/bad_close_token.lly
#[
SyntaxError: Expected closing token ')', not ']'.
    from bad_close_token.lly:6
]#

print("test.\\n"]
